creating people file
